--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
 
   <main class="form-signin">
 
-    <form>
+    <form action="signin.html">
 
       <h1 class="h3 mb-3 font-weight-normal">Please sign up- its free!</h1>
       <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
